Fix minor layout issues and added background image

--- a/src/App.scss
+++ b/src/App.scss
@@ -23,14 +23,15 @@
   }
 
   #main{
-    padding: 30px 20px ;
-    height: 100vh;
+    //padding: 30px 20px ;
+    margin:30px 40px ;
+    height: 90vh;
   }
 
   footer{
     position: fixed;
     bottom: 20px;
     left: 20px;
-    color: white;
+    color: #969696;
   }
 }
