--- a/src/TopicList/Topic.scss
+++ b/src/TopicList/Topic.scss
@@ -36,3 +36,14 @@
 		
 	}
 }
+
+#topic{
+	height: 100%;
+	width: 90%;
+	margin: 0 auto;
+	display: flex;
+	align-items: center;
+	#inner{
+		width: 100%;
+	}
+}
