--- a/src/Tutorial/Tutorial.scss
+++ b/src/Tutorial/Tutorial.scss
@@ -18,7 +18,9 @@
 	background-color: white;
 	color: black;
 	position:absolute;
-	width: 100%;
+	width: 80vw;
+	top: 20px;
+	left: 10vw;
 }
 
 .overlay-nextButton{
